wrapeer fix

--- a/web-scroll-page/src/style/style.sass
+++ b/web-scroll-page/src/style/style.sass
@@ -28,7 +28,7 @@ section
             align-items: center
             .img
                 position: relative
-                width: 500px
+                width: 800px
                 height: 400px
                 overflow: hidden
                 img
@@ -46,7 +46,11 @@ section
                 background: rgba(255, 255, 255, 0.1) 
                 backdrop-filter: blur(20px) // CHECK
                 padding: 40px
-                max-width: 300px
+                height: 320px
+                display: flex
+                justify-content: center
+                align-items: center
+                max-width: 400px
                 border: 1px solid rgba(255, 255, 255, 0.1)
                 border-radius: 10px
                 transform: translate(-80px, 50px) // ONCE WE CREATED A (PSD TO HTML) IN WHICH WE MAKE SOMETHING JUST LIKE THERE WE MADE A DIV OVER IMG SO THIS TRANSLATE METHOD IS BETTER THAN TO USE POSITION RELATIVE ETC
